--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^1.2.1",
     "astro": "^1.5.2"
   },
   "devDependencies": {
